--- a/.src/frontend/n_vue-js.org
+++ b/.src/frontend/n_vue-js.org
@@ -1102,9 +1102,10 @@ main.js
   </script>
 #+end_src
 
-* Vue-Cli
+* Vue-Cli/create-vue
+** Vue-CLi
 
-https://cli.vuejs.org/zh/guide/
+- https://cli.vuejs.org/zh/guide/
 
 基本使用:
 #+begin_src sh
@@ -1151,6 +1152,17 @@ vue.config.js:
 
 另外，一些全局性的参数，需要配置在 package.json 文件夹中。这是项目的主配置文件，跟脚手架没关系。
 比如，配置 eslint rules 和项目依赖的插件等，略过不提。
+
+** create-vue
+
+- https://vitejs.dev/guide/features.html
+- https://github.com/vuejs/create-vue
+- https://cn.vuejs.org/guide/scaling-up/tooling.html
+
+#+begin_src shell
+  npm create vue@3
+  npm init vue@latest
+#+end_src
 
 * [示例] Todo List
 
