--- a/.src/frontend/1-browser.org
+++ b/.src/frontend/1-browser.org
@@ -33,7 +33,9 @@
 #+end_src
 
 错误信息:
-: Access to XMLHttpRequest at 'https://localhost:7062/WeatherForecast' from origin 'http://127.0.0.1:5173' has been blocked by CORS policy: No 'Access-Control-Allow-Origin' header is present on the requested resource.
+#+begin_example
+Access to XMLHttpRequest at 'https://localhost:7062/WeatherForecast' from origin 'http://127.0.0.1:5173' has been blocked by CORS policy: No 'Access-Control-Allow-Origin' header is present on the requested resource.
+#+end_example
 
 方案:
 - JSONP (使用钻空子的方式，强行跨域)
