--- a/.src/frontend/1-browser.org
+++ b/.src/frontend/1-browser.org
@@ -41,7 +41,7 @@ Access to XMLHttpRequest at 'https://localhost:7062/WeatherForecast' from origin
 - JSONP (使用钻空子的方式，强行跨域)
 - CORS (跨域资源共享, Cross Origin Resource Share) 标准
 
-在响应的时候，添加 Response Header。浏览器可以据此判定是否要展示内容:
+CORS 是在 Server 和 Browser 之间达成一个协议: 服务器在响应的时候添加相关 Response Header; 浏览器在展示的时候以这些 Header 作为依据:
 #+begin_src conf
   Access-Control-Allow-Origin: *
   Access-Control-Allow-Origin: https://developer.mozilla.org
@@ -54,7 +54,7 @@ Access to XMLHttpRequest at 'https://localhost:7062/WeatherForecast' from origin
   Access-Control-Request-Method: POST
 #+end_src
 
-在 .NET WebAPI 中:
+在 .NET WebAPI 中，配置即可使用:
 #+begin_src csharp
   builder.Services.AddCors(o =>
   {
