--- a/.src/.sitemap.org
+++ b/.src/.sitemap.org
@@ -2,6 +2,7 @@
 
 - [[file:index.org][173.NET]]
 - 111
+  - [[file:111/git.org][GIT/Linux]]
   - [[file:111/notes.org][Tips]]
   - [[file:111/tasks.org][任务和作业]]
   - [[file:111/words.org][English]]
