best_try_and_best_chance

--- a/.src/111/git.org
+++ b/.src/111/git.org
@@ -44,6 +44,10 @@ VIM 分不同模式:
 
 [[file:img/oimg_20230329_101015.png]]
 
+
+[[file:img/oimg_20230329_101156.png]]
+
+
 #+begin_src sh
   # 初始化仓库
   git init
