best_try_and_best_chance

--- a/.src/index.org
+++ b/.src/index.org
@@ -52,7 +52,7 @@
 #+HTML: </section>
 
 #+HTML: <aside>
-#+INCLUDE: "111/.group.org"
+# #+INCLUDE: "111/.group.org"
 #+HTML: </aside>
 
 #+HTML: </div>
