--- a/.src/index.org
+++ b/.src/index.org
@@ -21,10 +21,11 @@
 #+HTML_HEAD:   #main aside > ol { display: flex; flex-flow: row wrap; width: 368px; box-shadow: 0 0 10px #eee; padding: 20px 0 20px 20px; margin-top: -4em; }
 #+HTML_HEAD:   #main aside > ol > li { margin-bottom: 1em; width: 150px; }
 #+HTML_HEAD: }
+#+HTML_HEAD: .title {color: red; font-weight: normal; font-size: 1.8em; text-shadow: 0 0 1px #ee0000; font-family: 楷体}
 #+HTML_HEAD: </style>
 
 # #+HTML: <h2 style="color: red; font-weight: bold; text-shadow: 0 0 1px #ee0000"><img style="width: 98%" src="/html/asset/dream.png"></h4>
-#+HTML: <h3 style="color: red; font-weight: normal; font-size: 1.8em; text-shadow: 0 0 1px #ee0000; font-family: 楷体">就业季 (明确方向，做好准备)</h3>
+#+HTML: <h3 class="title">Happy Coding</h3>
 
 #+HTML: <div id="main">
 
