best_try_and_best_chance

--- a/html/skills/windows.org
+++ b/html/skills/windows.org
@@ -1,6 +1,17 @@
 #+TITLE: Windows
 
 
+* 快捷键
+
+全局:
+- =Win-r=, 打开【运行窗口】
+- =Win-e=, 打开【文件管理器】
+
+在记事本中:
+- =Ctrl-s=, 保存文件内容
+- =Ctrl-z=, 回车内容
+- =Ctrl-c= / =Ctrl-V=, 复制粘贴
+
 * 命令提示符
 
 打开方式:
