best_try_and_best_chance

--- a/.src/skills/windows.org
+++ b/.src/skills/windows.org
@@ -22,4 +22,18 @@
 基本规则:
 - 敲入命令，然后敲回车执行
 - 命令类似 =cp a b= 这样的格式，使用空格分割，第一部分 (=cp=) 是命令程序，其他部分是参数。参数可以有 0 个或多个
+- 如果敲入命令 (比如 =csc=) 然后按回车，命令提示符将会去寻找相应的可执行文件去执行 (=csc.exe=)。其寻找逻辑如下:
+  + 如果当前文件夹下有 =csc.exe=, 那么 csc 代表的就是当前文件夹下的 =csc.exe=
+  + 如果当前文件夹下没有 =csc.exe= 文件，那么会在【PATH 环境变量】里配置的文件夹中依次寻找，并使用第一个找到的
+  + 如果还是没找到，则显示 =xxx 不是内部或外部命令，也不是可运行的程序或批处理文件=
+  + 当然，也可以在命令提示符下，输入完整的可执行文件的路径去显式执行程序
+
+因此，如果在命令提示符下，输入 csc 后显示不是内部命令，则可以:
+1. 使用完整路径去调用 csc.exe 程序，比如 =C:\Windows\Microsoft.NET\Framework64\v4.0.30319\csc.exe hello.txt=
+2. 配置【PATH 环境变量】，在其中增加 =C:\Windows\Microsoft.NET\Framework64\v4.0.30319= 文件夹
+
+配置 PATH 环境变量的方式:
+1. 【我的电脑】-【属性】-【高级系统设置】-【环境变量...】
+2. 找到【Path】条目，通过添加，将文件夹 (比如 =C:\Windows\Microsoft.NET\Framework64\v4.0.30319=) 添加到其中
+
 
