best_try_and_best_chance

--- a/.src/skills/windows.org
+++ b/.src/skills/windows.org
@@ -37,4 +37,10 @@
 2. 找到【Path】条目，通过添加，将文件夹 =C:\Windows\Microsoft.NET\Framework64\v4.0.30319= 添加到其中
 3. 然后打开的任意命令提示符下，你就可以直接调用 =csc= 命令，而不需要输入完整路径了
 
+常用命令:
+- =dir=, 用来列出当前工作目录中的内容, dir 是 Directory 的缩写, 即文件夹
+- =cd 文件夹路径=, 用来将当前工作目录切换到某个文件夹, cd 是 Change Directory 的缩写, 其中 =cd ..= 表示切换到上一层文件夹
+- =del 文件名=, 用来删除文件, del 是 delete 的缩写，即删除
+- =ping 8.8.8.8=, 用来测试是否能正常上网
+- =ipconfig=, 用来显示当前电脑的 IP 信息
 
