best_try_and_best_chance

--- a/.src/dotnet/1-csharp.org
+++ b/.src/dotnet/1-csharp.org
@@ -2,7 +2,7 @@
 
 * 基本规则
 
-人有人的语言，电脑有电脑的语言。编译器是两者的桥梁。
+人有人的语言，电脑有电脑的语言。连接两者的是 *编译器* 。
 
 #+ATTR_HTML: :width 600px
 [[file:img/01-hello-compile.png]]
