--- a/.src/.sitemap.org
+++ b/.src/.sitemap.org
@@ -1,9 +1,9 @@
 #+TITLE: Sitemap for project _notes_yao63
 
 - [[file:index.org][AIT.NET]]
+- Misc
+  - [[file:Misc/report-192.org][Report-192]]
 - dotnet
   - [[file:dotnet/1-csharp.org][1-csharp]]
-- misc
-  - [[file:misc/report-192.org][Report-192]]
 - skills
   - [[file:skills/windows.org][Windows]]
