--- a/.src/.sitemap.org
+++ b/.src/.sitemap.org
@@ -1,8 +1,8 @@
 #+TITLE: Sitemap for project _notes_yao63
 
 - [[file:index.org][AIT.NET]]
-- Misc
-  - [[file:Misc/report-192.org][Report-192]]
+- ccc
+  - [[file:ccc/report-192.org][Report-192]]
 - dotnet
   - [[file:dotnet/1-csharp.org][1-csharp]]
 - skills
