best_try_and_best_chance

--- a/.src/ccc/report-192.org
+++ b/.src/ccc/report-192.org
@@ -12,7 +12,7 @@
 | 古远东 |           |
 | 许焕圣 |           |
 | 卢德涛 |           |
-| 余海中 |           |
+| 余海中 |         3 |
 | 岑法政 |           |
 | 张桂毓 |           |
 | 陆宇轩 |           |
@@ -24,7 +24,7 @@
 | 段文潇 |         2 |
 | 段文锋 |           |
 | 段京文 |           |
-| 谭鑫   |           |
+| 谭鑫   |         4 |
 | 郭榕荣 |           |
 | 陈梓鑫 |           |
 | 谢晓中 |           |
