best_try_and_best_chance

--- a/.src/ccc/report-192.org
+++ b/.src/ccc/report-192.org
@@ -36,7 +36,7 @@
 | 苏大明 |           |
 | 沈艺宏 |           |
 | 饶展源 |           |
-| 麦天河 |           |
+| 麦天河 |         6 |
 | 刘虹佑 |           |
 | 刘广鸿 |           |
 | 梁泽文 |           |
@@ -46,4 +46,4 @@
 | 黄飞超 |           |
 | 贝俊霖 |           |
 | 陈颖聪 |           |
-| 高旻昱 |           |
+| 高旻昱 |         5 |
