best_try_and_best_chance

--- a/.src/ccc/report-192.org
+++ b/.src/ccc/report-192.org
@@ -8,10 +8,10 @@
 | 李吉   |         1 |
 | 叶宇   |           |
 | 肖义珥 |           |
-| 王海波 |           |
-| 何华为 |           |
+| 王海波 |         9 |
+| 何华为 |         8 |
 | 古远东 |           |
-| 许焕圣 |           |
+| 许焕圣 |         7 |
 | 卢德涛 |           |
 | 余海中 |         3 |
 | 岑法政 |           |
