--- a/.src/.sitemap.org
+++ b/.src/.sitemap.org
@@ -2,7 +2,7 @@
 
 - [[file:index.org][AIT.NET]]
 - ccc
-  - [[file:ccc/report-192.org][Report-192]]
+  - [[file:ccc/reports_192.org][Report of 192]]
 - dotnet
   - [[file:dotnet/1-csharp.org][1-csharp]]
 - skills
