best_try_and_best_chance

--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -7,7 +7,7 @@
 |-------+-------------|
 | 李吉   |           1 |
 | 叶宇   |             |
-| 肖义珥 |             |
+| 肖义珥 |          10 |
 | 王海波 |           9 |
 | 何华为 |           8 |
 | 古远东 |             |
@@ -39,7 +39,7 @@
 | 饶展源 |             |
 | 麦天河 |           6 |
 | 刘虹佑 |             |
-| 刘广鸿 |             |
+| 刘广鸿 |          11 |
 | 梁泽文 |             |
 | 李泽俊 |             |
 | 李耀武 |             |
