best_try_and_best_chance

--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -6,26 +6,30 @@
 | 姓名   | 1.hello.txt |
 |-------+-------------|
 | 李吉   |           1 |
-| 叶宇   |             |
-| 肖义珥 |          10 |
-| 王海波 |           9 |
-| 何华为 |           8 |
-| 古远东 |             |
-| 许焕圣 |           7 |
-| 卢德涛 |             |
+| 段文潇 |           2 |
 | 余海中 |           3 |
+| 谭鑫   |           4 |
+| 高旻昱 |           5 |
+| 麦天河 |           6 |
+| 许焕圣 |           7 |
+| 何华为 |           8 |
+| 王海波 |           9 |
+| 肖义珥 |          10 |
+| 刘广鸿 |          11 |
+| 刘翔   |          12 |
+| 段文锋 |          13 |
+| 刘虹佑 |          14 |
+| 叶宇   |             |
+| 古远东 |             |
+| 卢德涛 |             |
 | 岑法政 |             |
 | 张桂毓 |             |
 | 陆宇轩 |             |
 | 何晓东 |             |
 | 李岳元 |             |
 | 刘泽泉 |             |
-| 刘翔   |          12 |
 | 周永久 |             |
-| 段文潇 |           2 |
-| 段文锋 |          13 |
 | 段京文 |             |
-| 谭鑫   |           4 |
 | 郭榕荣 |             |
 | 陈梓鑫 |             |
 | 谢晓中 |             |
@@ -37,9 +41,6 @@
 | 苏大明 |             |
 | 沈艺宏 |             |
 | 饶展源 |             |
-| 麦天河 |           6 |
-| 刘虹佑 |             |
-| 刘广鸿 |          11 |
 | 梁泽文 |             |
 | 李泽俊 |             |
 | 李耀武 |             |
@@ -47,4 +48,3 @@
 | 黄飞超 |             |
 | 贝俊霖 |             |
 | 陈颖聪 |             |
-| 高旻昱 |           5 |
