best_try_and_best_chance

--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -19,6 +19,7 @@
 | 刘翔   |          12 |
 | 段文锋 |          13 |
 | 刘虹佑 |          14 |
+| 张甘霖 |          15 |
 | 叶宇   |             |
 | 古远东 |             |
 | 卢德涛 |             |
@@ -33,7 +34,6 @@
 | 郭榕荣 |             |
 | 陈梓鑫 |             |
 | 谢晓中 |             |
-| 张甘霖 |             |
 | 薛进超 |             |
 | 吴幸林 |             |
 | 韦金良 |             |
