--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -20,6 +20,7 @@
 | 段文锋 |          13 |
 | 刘虹佑 |          14 |
 | 张甘霖 |          15 |
+| 李岳元 |          16 |
 | 叶宇   |             |
 | 古远东 |             |
 | 卢德涛 |             |
@@ -27,7 +28,6 @@
 | 张桂毓 |             |
 | 陆宇轩 |             |
 | 何晓东 |             |
-| 李岳元 |             |
 | 刘泽泉 |             |
 | 周永久 |             |
 | 段京文 |             |
