best_try_and_best_chance

--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -21,6 +21,7 @@
 | 刘虹佑 |          14 |
 | 张甘霖 |          15 |
 | 李岳元 |          16 |
+| 段京文 |          17 |
 | 叶宇   |             |
 | 古远东 |             |
 | 卢德涛 |             |
@@ -30,7 +31,6 @@
 | 何晓东 |             |
 | 刘泽泉 |             |
 | 周永久 |             |
-| 段京文 |             |
 | 郭榕荣 |             |
 | 陈梓鑫 |             |
 | 谢晓中 |             |
