best_try_and_best_chance

--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -22,8 +22,9 @@
 | 张甘霖 |          15 |
 | 李岳元 |          16 |
 | 段京文 |          17 |
+| 古远东 |          18 |
+| 黄可彬 |          19 |
 | 叶宇   |             |
-| 古远东 |             |
 | 卢德涛 |             |
 | 岑法政 |             |
 | 张桂毓 |             |
@@ -44,7 +45,6 @@
 | 梁泽文 |             |
 | 李泽俊 |             |
 | 李耀武 |             |
-| 黄可彬 |             |
 | 黄飞超 |             |
 | 贝俊霖 |             |
 | 陈颖聪 |             |
