best_try_and_best_chance

--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -3,7 +3,7 @@
 
 * Records
 
-| 姓名   | 1.hello.txt |
+| 姓名   | 1.hello.txt\n完成从创建文件、编译到运行的整个过程 |
 |-------+-------------|
 | 李吉   |           1 |
 | 段文潇 |           2 |
