--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -1,50 +1,53 @@
 #+TITLE: Report of 192
 
 
-* Records
+* 测验结果
 
-| 姓名   | 1.hello.txt\n完成从创建文件、编译到运行的整个过程 |
-|-------+-------------|
-| 李吉   |           1 |
-| 段文潇 |           2 |
-| 余海中 |           3 |
-| 谭鑫   |           4 |
-| 高旻昱 |           5 |
-| 麦天河 |           6 |
-| 许焕圣 |           7 |
-| 何华为 |           8 |
-| 王海波 |           9 |
-| 肖义珥 |          10 |
-| 刘广鸿 |          11 |
-| 刘翔   |          12 |
-| 段文锋 |          13 |
-| 刘虹佑 |          14 |
-| 张甘霖 |          15 |
-| 李岳元 |          16 |
-| 段京文 |          17 |
-| 古远东 |          18 |
-| 黄可彬 |          19 |
-| 叶宇   |             |
-| 卢德涛 |             |
-| 岑法政 |             |
-| 张桂毓 |             |
-| 陆宇轩 |             |
-| 何晓东 |             |
-| 刘泽泉 |             |
-| 周永久 |             |
-| 郭榕荣 |             |
-| 陈梓鑫 |             |
-| 谢晓中 |             |
-| 薛进超 |             |
-| 吴幸林 |             |
-| 韦金良 |             |
-| 唐景富 |             |
-| 苏大明 |             |
-| 沈艺宏 |             |
-| 饶展源 |             |
-| 梁泽文 |             |
-| 李泽俊 |             |
-| 李耀武 |             |
-| 黄飞超 |             |
-| 贝俊霖 |             |
-| 陈颖聪 |             |
+| 姓名   | 2023-09-06 |
+|-------+------------|
+| 李吉   |          1 |
+| 段文潇 |          2 |
+| 余海中 |          3 |
+| 谭鑫   |          4 |
+| 高旻昱 |          5 |
+| 麦天河 |          6 |
+| 许焕圣 |          7 |
+| 何华为 |          8 |
+| 王海波 |          9 |
+| 肖义珥 |         10 |
+| 刘广鸿 |         11 |
+| 刘翔   |         12 |
+| 段文锋 |         13 |
+| 刘虹佑 |         14 |
+| 张甘霖 |         15 |
+| 李岳元 |         16 |
+| 段京文 |         17 |
+| 古远东 |         18 |
+| 黄可彬 |         19 |
+| 叶宇   |            |
+| 卢德涛 |            |
+| 岑法政 |            |
+| 张桂毓 |            |
+| 陆宇轩 |            |
+| 何晓东 |            |
+| 刘泽泉 |            |
+| 周永久 |            |
+| 郭榕荣 |            |
+| 陈梓鑫 |            |
+| 谢晓中 |            |
+| 薛进超 |            |
+| 吴幸林 |            |
+| 韦金良 |            |
+| 唐景富 |            |
+| 苏大明 |            |
+| 沈艺宏 |            |
+| 饶展源 |            |
+| 梁泽文 |            |
+| 李泽俊 |            |
+| 李耀武 |            |
+| 黄飞超 |            |
+| 贝俊霖 |            |
+| 陈颖聪 |            |
+
+任务详情:
+- 2023-09-06: 1.hello.txt, 完成从创建文件、编译到运行的整个过程
