best_try_and_best_chance

--- a/.src/.sitemap.org
+++ b/.src/.sitemap.org
@@ -2,6 +2,7 @@
 
 - [[file:index.org][AIT.NET]]
 - ccc
+  - [[file:ccc/reports_190.org][Report of 190]]
   - [[file:ccc/reports_192.org][Report of 192]]
 - dotnet
   - [[file:dotnet/1-csharp.org][1-csharp]]
