best_try_and_best_chance

--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -29,11 +29,11 @@
 | 王上标 |         23 |
 | 肖毅良 |         24 |
 | 张明达 |         25 |
+| 周远龙 |         26 |
 | 何锦晖 |            |
 | 魏坤   |            |
 | 周枫   |            |
 | 曾宏燊 |            |
-| 周远龙 |            |
 | 林显诚 |            |
 | 肖峰   |            |
 | 左亮   |            |
