best_try_and_best_chance

--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -39,19 +39,19 @@
 | 吴嘉城 |         33 |
 | 夏志豪 |         34 |
 | 林显诚 |         35 |
+| 周枫   |          - |
+| 曾宏燊 |          - |
+| 肖峰   |          - |
+| 左亮   |          - |
+| 符文财 |          - |
+| 谢鹤鸣 |          - |
+| 邓炜祺 |          - |
+| 韦代帅 |          q |
+| 郭小龙 |            |
+| 车斌涛 |            |
 | 何锦晖 |            |
 | 魏坤   |            |
-| 周枫   |            |
-| 曾宏燊 |            |
-| 肖峰   |            |
-| 左亮   |            |
-| 符文财 |            |
-| 郭小龙 |            |
-| 谢鹤鸣 |            |
-| 邓炜祺 |            |
-| 车斌涛 |            |
 | 刘仁杰 |            |
-| 韦代帅 |            |
 | 黄萧   |            |
 
 
