best_try_and_best_chance

--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -31,22 +31,22 @@
 | 刘泽泉 |          - |
 | 吴幸林 |          - |
 | 唐景富 |          - |
-| 叶宇   |            |
-| 卢德涛 |            |
-| 岑法政 |            |
+| 叶宇   |          - |
+| 卢德涛 |          - |
+| 陆宇轩 |          - |
+| 韦金良 |          - |
+| 饶展源 |          - |
+| 郭榕荣 |          - |
+| 贝俊霖 |          - |
 | 张桂毓 |            |
-| 陆宇轩 |            |
+| 岑法政 |            |
 | 何晓东 |            |
 | 周永久 |            |
-| 郭榕荣 |            |
 | 陈梓鑫 |            |
 | 谢晓中 |            |
 | 薛进超 |            |
-| 韦金良 |            |
-| 饶展源 |            |
 | 梁泽文 |            |
 | 黄飞超 |            |
-| 贝俊霖 |            |
 | 陈颖聪 |            |
 
 任务详情:
