best_try_and_best_chance

--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -38,15 +38,15 @@
 | 饶展源 |          - |
 | 郭榕荣 |          - |
 | 贝俊霖 |          - |
+| 陈梓鑫 |          - |
+| 梁泽文 |          - |
+| 黄飞超 |          - |
 | 张桂毓 |            |
 | 岑法政 |            |
 | 何晓东 |            |
 | 周永久 |            |
-| 陈梓鑫 |            |
 | 谢晓中 |            |
 | 薛进超 |            |
-| 梁泽文 |            |
-| 黄飞超 |            |
 | 陈颖聪 |            |
 
 任务详情:
