--- a/.src/.sitemap.org
+++ b/.src/.sitemap.org
@@ -3,6 +3,7 @@
 - [[file:index.org][AIT.NET]]
 - ccc
   - [[file:ccc/reports_190.org][Report of 190]]
+  - [[file:ccc/reports_191.org][Report of 191]]
   - [[file:ccc/reports_192.org][Report of 192]]
 - dotnet
   - [[file:dotnet/1-csharp.org][1-csharp]]
