--- a/.src/ccc/reports_191.org
+++ b/.src/ccc/reports_191.org
@@ -4,16 +4,20 @@
 
 | 姓名   | 2023-09-11 |
 |-------+------------|
+| 陈嘉鹏 |          1 |
+| 廖哲   |          2 |
+| 刘宁   |          3 |
+| 秦铭杉 |          4 |
+| 黄佳鹏 |          5 |
+| 覃宇江 |          6 |
+| 唐瑞钦 |          7 |
+| 曾世强 |          8 |
 | 刘燃东 |            |
 | 岑宇森 |            |
 | 韦海永 |            |
 | 林宝荣 |            |
 | 魏智锋 |            |
 | 李境松 |            |
-| 廖哲   |            |
-| 秦铭杉 |            |
-| 曾世强 |            |
-| 刘宁   |            |
 | 陈述亮 |            |
 | 曾凯   |            |
 | 陈子健 |            |
@@ -21,7 +25,6 @@
 | 张翔宇 |            |
 | 叶子超 |            |
 | 刘志豪 |            |
-| 覃宇江 |            |
 | 吴志挥 |            |
 | 潘嘉豪 |            |
 | 朱荣如 |            |
