best_try_and_best_chance

--- a/.src/ccc/reports_191.org
+++ b/.src/ccc/reports_191.org
@@ -13,18 +13,18 @@
 | 唐瑞钦 |          7 |
 | 曾世强 |          8 |
 | 魏智锋 |          9 |
-| 刘燃东 |            |
+| 刘燃东 |         10 |
+| 陈述亮 |         11 |
+| 李境松 |         12 |
+| 刘志豪 |         13 |
+| 韦海永 |         14 |
+| 叶子超 |         15 |
 | 岑宇森 |            |
-| 韦海永 |            |
 | 林宝荣 |            |
-| 李境松 |            |
-| 陈述亮 |            |
 | 曾凯   |            |
 | 陈子健 |            |
 | 刁扬春 |            |
 | 张翔宇 |            |
-| 叶子超 |            |
-| 刘志豪 |            |
 | 吴志挥 |            |
 | 潘嘉豪 |            |
 | 朱荣如 |            |
