best_try_and_best_chance

--- a/.src/ccc/reports_191.org
+++ b/.src/ccc/reports_191.org
@@ -19,13 +19,13 @@
 | 刘志豪 |         13 |
 | 韦海永 |         14 |
 | 叶子超 |         15 |
+| 张翔宇 |         16 |
+| 吴志挥 |         17 |
+| 陈子健 |         18 |
 | 岑宇森 |            |
 | 林宝荣 |            |
 | 曾凯   |            |
-| 陈子健 |            |
 | 刁扬春 |            |
-| 张翔宇 |            |
-| 吴志挥 |            |
 | 潘嘉豪 |            |
 | 朱荣如 |            |
 
