--- a/.src/ccc/reports_191.org
+++ b/.src/ccc/reports_191.org
@@ -22,12 +22,12 @@
 | 张翔宇 |         16 |
 | 吴志挥 |         17 |
 | 陈子健 |         18 |
+| 潘嘉豪 |          - |
+| 朱荣如 |          - |
 | 岑宇森 |            |
 | 林宝荣 |            |
 | 曾凯   |            |
 | 刁扬春 |            |
-| 潘嘉豪 |            |
-| 朱荣如 |            |
 
 备注:
 - 2023-09-11, 创建 helloworld、编译、运行，独立完成
