best_try_and_best_chance

--- a/.src/dotnet/1-csharp.org
+++ b/.src/dotnet/1-csharp.org
@@ -8,7 +8,11 @@
 #+ATTR_HTML: :width 600px
 [[file:img/01-hello-compile.png]]
 
-
+基本步骤:
+- 创建源文件 (文本文档，适合人类阅读)
+- 编码 (写入符合规则的内容，C# 语法)
+- 编译 (使用 csc 在命令行下进行)
+- 运行 (机器文件，内含指令代码和各种二进制数据)
 
 
 
