best_try_and_best_chance

--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -46,7 +46,7 @@
 | 符文财 |          - |
 | 谢鹤鸣 |          - |
 | 邓炜祺 |          - |
-| 韦代帅 |          q |
+| 韦代帅 |          - |
 | 郭小龙 |            |
 | 车斌涛 |            |
 | 何锦晖 |            |
