--- a/.src/dotnet/1-csharp.org
+++ b/.src/dotnet/1-csharp.org
@@ -14,5 +14,13 @@
 - 编译 (使用 csc 在命令行下进行)
 - 运行 (机器文件，内含指令代码和各种二进制数据)
 
+基本规则:
+- 程序结构:
+   命名空间 (namespace)
+     类型 (class)
+       字段
+       方法 (Main)
+       方法
+- 学会偷懒 (变量、方法)
 
 
