best_try_and_best_chance

--- a/.src/ccc/reports_190.org
+++ b/.src/ccc/reports_190.org
@@ -1,5 +1,11 @@
 #+TITLE: Report of 190
 
+
+
+* 信息
+
+- 学习委员: 黄军帮
+
 * 测验结果
 
 | 姓名   | 2023-09-07 |
@@ -47,10 +53,10 @@
 | 谢鹤鸣 |          - |
 | 邓炜祺 |          - |
 | 韦代帅 |          - |
-| 郭小龙 |            |
-| 车斌涛 |            |
-| 何锦晖 |            |
-| 魏坤   |            |
+| 郭小龙 |          - |
+| 魏坤   |          - |
+| 车斌涛 |          - |
+| 何锦晖 |          - |
 | 刘仁杰 |            |
 | 黄萧   |            |
 
