--- a/.src/ccc/reports_192.org
+++ b/.src/ccc/reports_192.org
@@ -51,8 +51,8 @@
 | 何晓东 | -          |
 | 薛进超 | -          |
 | 岑法政 |            |
-| 谢晓中 |            |
-| 陈颖聪 |            |
+| 谢晓中 | -          |
+| 陈颖聪 | -          |
 
 任务详情:
 - 2023-09-06: 1.hello.txt, 完成从创建文件、编译到运行的整个过程
